add contact page

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -99,7 +99,31 @@ min-height: 100vh;
 .homepage .overlay ul li a{
   font-size: 46px;
 }
+/*Contacts*/
+.contacts{
+  background-image:var(--background-image);
+  min-height: 100vh;
+}
+.contacts h1{
+  padding:50px 80px ;
+  color:#fff;
+}
+.contacts ul{
+  position: absolute;
+  left:50%;
+  top:50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+}
+.contacts ul li{
+  margin: 10px 0;
+  
+}
+.contacts ul li a{
+  font-size: 30px;
+}
 
+/*Media*/
 @media (max-width:992px) {
   .homepage .overlay h1{
     font-size: 64px;
@@ -119,6 +143,9 @@ min-height: 100vh;
   }
   .homepage .overlay ul li a{
     font-size: 24px;
+  }
+  .contacts ul li a{
+    font-size: 18px;
   }
   
 }
